<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.dpa.presentation.OrderPrescriptionActivity"
    android:background="@drawable/bg" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prescriptionNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescriptionName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
        
        <TextView
            android:id="@+id/prescName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Xanax"
            android:textAppearance="?android:attr/textAppearanceLarge" />
             
</TableRow>
<Space
        android:layout_width="1dp"
        android:layout_height="10dp" />
 
   <TableRow
 		android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/prescriptionDosageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescriptionDosage"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
        
        <TextView
            android:id="@+id/prescDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000mg"
            android:textAppearance="?android:attr/textAppearanceLarge" />

	</TableRow>
	
    	<Space
     	   android:layout_width="1dp"
      	  android:layout_height="10dp" />
	
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prescriptionRefillsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescriptionRefills"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
        
        <TextView
            android:id="@+id/prescRefills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textAppearance="?android:attr/textAppearanceLarge" />
         
          </TableRow>   
    
    
	 <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />
	 
	  <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prescriptionStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescStatus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
        
        <TextView
            android:id="@+id/prescStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ordered"
            android:textAppearance="?android:attr/textAppearanceLarge" />
         
          </TableRow>   
    
    
	 <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />
	 
  <TableRow
		android:layout_height="wrap_content"
       	android:layout_width="wrap_content">
        
		<Button
		    android:id="@+id/buttonAdd"
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left"
		    android:gravity="center"
		    android:onClick="buttonOrderPrescriptionOnClick"
		    android:text="@string/order_presc"
		    android:textSize="20sp" />
            
		</TableRow>
			

	
</TableLayout>
