<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.dpa.presentation.PrescriptionAddActivity"
    android:background="@drawable/bg" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prescName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescription_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editPrescName"
            android:inputType="textCapWords" />
    </TableRow>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prescDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescription_dosage"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editPrescDosage"
            android:inputType="textPersonName" 
     		android:maxLength="6"
            />
    </TableRow>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/refills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescription_refills"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="200dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editPrescFills"
            android:digits="0123456789"
            android:inputType="number|none"
            android:maxLength="5" />

    </TableRow>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SubmitPresc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="buttonAddPrescOnClick"
            android:text="@string/add_presciption" />

    </TableRow>

</TableLayout>